Fixed images in about page

--- a/Web/css/about.css
+++ b/Web/css/about.css
@@ -45,7 +45,7 @@ body {
 .image1 {
     height: 200px;
     width: 200px;
-    background-image: url(assets/Niranjan.jpg);
+    background-image: url(/assets/Niranjan.jpg);
     background-size: cover;
     border-radius: 50%;
     border: 8px solid white;
@@ -59,7 +59,7 @@ body {
 .image2 {
     height: 200px;
     width: 200px;
-    background-image: url(assets/pratik.jpeg);
+    background-image: url(/assets/pratik.jpeg);
     background-size: cover;
     border-radius: 50%;
     border: 8px solid white;
@@ -73,7 +73,7 @@ body {
 .image3 {
     height: 200px;
     width: 200px;
-    background-image: url(assets/atharva.jpg);
+    background-image: url(/assets/atharva.jpg);
     background-size: cover;
     background-position: 50% 30%;
     border-radius: 50%;
@@ -88,7 +88,7 @@ body {
 .image4 {
     height: 200px;
     width: 200px;
-    background-image: url(assets/aditya.jpg);
+    background-image: url(/assets/aditya.jpg);
     background-size: cover;
     background-position: 40% 30%;
     border-radius: 50%;
