--- a/Web/css/about.css
+++ b/Web/css/about.css
@@ -59,6 +59,9 @@ body {
     margin-left: 110px;
     box-shadow: 0 2px 15px rgb(58, 54, 54);
     transform: rotate(-25deg);
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .image2 {
@@ -73,6 +76,9 @@ body {
     margin-left: 110px;
     box-shadow: 0 2px 15px rgb(58, 54, 54);
     transform: rotate(-25deg);
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .image3 {
@@ -88,6 +94,9 @@ body {
     margin-left: 110px;
     box-shadow: 0 2px 15px rgb(58, 54, 54);
     transform: rotate(-25deg);
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .image4 {
@@ -103,6 +112,9 @@ body {
     margin-left: 110px;
     box-shadow: 0 2px 15px rgb(58, 54, 54);
     transform: rotate(-25deg);
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .shape {
@@ -124,23 +136,35 @@ h1 {
     font-weight: 700;
     font-family: 'Montserrat', sans-serif;
     text-shadow: 2px 3px 9px rgba(132,132,132,0.5);
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 h3 {
     margin-bottom: 10px;
     font-size: 25px;
     font-family: 'Montserrat', sans-serif;
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .title {
     font-size: 20px;
     color: rgb(71, 66, 66);
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 p {
     padding-left: 30px;
     padding-right: 30px;
     color: rgb(71, 66, 66);
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 .icons {
